# CLI-OMUR

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Makefile  manage.py  pyproject.toml  requirements.txt
app/settings/: admin.py  apps.py  enum.py  models.py  serializers.py  translation.py  urls.py  views.py
core/: urls.py  wsgi.py  yasg.py
core/settings/: base.py  development.py  jazzmin.py  production.py
